# AI_Bridge_Progect

./: .gitignore  README.md  pyproject.toml  telegram_bot_enhanced.py  test_chatgpt.py  test_enhanced_functionality.py  test_quick_session_recovery.py  test_session_recovery.py  test_speed_performance.py  test_system.py
app/: main.py  settings.py
app/client/: browser_client.py
app/server/: api_server.py
app/services/: chatgpt_bridge.py  request_queue.py
outer/: main.py
outer/client/: browser_client.py
outer/server/: api_server.py
outer/services/: chatgpt_bridge.py  request_queue.py
tests/: test_enhanced_functionality.py  test_quick_session_recovery.py  test_session_recovery.py  test_system.py
trash/: Dockerfile  docker-compose.yml  run_system.py  simple_telegram_bot.py  telegram_bot_manager.py
trash/inner_docker/: Dockerfile  main.py  main_simple.py  requirements.txt
trash/inner_docker/client/: browser_client.py
trash/inner_docker/server/: api_server.py
trash/inner_docker/services/: chatgpt_bridge.py  request_queue.py  telegram_service.py
